# ChangeLog for genkernel
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel,
  .gitattributes:
  Adding Id header and enabling Ident on *.sh files.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS, BUGS,
  HACKING, README, TODO:
  Adding Id header.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> .gitattributes:
  Adding additional files to .gitattributes to enable Ident.

  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> +.gitattributes:
  Adding .gitattributes file.

  19 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts:
  Change command used to determine real filename for REAL_RESUME for Gentoo
  bug #269603

  19 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> arch/alpha/modules_load,
  arch/arm/modules_load, arch/ia64/modules_load, arch/mips/modules_load,
  arch/parisc/modules_load, arch/parisc64/modules_load,
  arch/ppc/modules_load, arch/ppc64/modules_load, arch/sparc/modules_load,
  arch/sparc64/modules_load, arch/um/modules_load, arch/x86/modules_load,
  arch/x86_64/modules_load, defaults/modules_load:
  Add aic94xx to MODULES_SCSI for Gentoo bug #277792

  12 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> arch/x86/kernel-config,
  arch/x86_64/kernel-config:
  enable CONFIG_SYSFS_DEPRECATED=y in x86/x86_64 kernel-config for Gentoo
  bug #225249

  12 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Apply patch for Gentoo bug #276753 for new lvm.static binary

  07 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel:
  Version bumping to 3.4.10.905 for release.

  04 Jul 2009; Andrew Gaffney <agaffney@gentoo.org> gen_funcs.sh, genkernel:
  Remove code to check for host kernel LOOP support for Gentoo bug #275757

  28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/modprobe,
  genkernel.conf: