@@ -1,5 +1,4 @@
-#!/bin/bash
-
+# $Id$
 #
 # Arch-specific options that normally shouldn't be changed.
 #
