@@ -3,6 +3,16 @@
 # Distributed under the GPL v2
 # $Id$
 
+  25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  arch/alpha/config.sh, arch/arm/config.sh, arch/ia64/config.sh,
+  arch/mips/config.sh, arch/parisc/config.sh, arch/parisc64/config.sh,
+  arch/ppc/config.sh, arch/ppc64/config.sh, arch/sparc/config.sh,
+  arch/sparc64/config.sh, arch/um/config.sh, arch/x86/config.sh,
+  arch/x86_64/config.sh, defaults/config.sh, gen_arch.sh, gen_bootloader.sh,
+  gen_cmdline.sh, gen_compile.sh, gen_configkernel.sh, gen_determineargs.sh,
+  gen_funcs.sh, gen_initramfs.sh, gen_moddeps.sh, gen_package.sh:
+  Adding Id header.
+
   25 Jul 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> genkernel,
   .gitattributes:
   Adding Id header and enabling Ident on *.sh files.
